Revise chronark.com project details
Updated project details for chronark.com to reflect new focus on manufacturing cost intelligence, including a new title, description, and context.

--- a/content/projects/chronark.com.mdx
+++ b/content/projects/chronark.com.mdx
@@ -1,14 +1,25 @@
 ---
-title: chronark.com
-description: The website you're looking at
-repository: chronark/chronark.com
-url: https://chronark.com
-date: 2023-03-28
-published: true
+title: "Manufacturing Cost Intelligence System"
+description: "Margin forecasting and what-if scenarios for manufacturing lines."
+date: "2025-12-01"
 ---
 
+## Context
 
-Like so many others, I just wanted a place to collect some projects I worked on. Maybe I'll add a blog, maybe I won't. I'm not sure yet.
+Operations needed a way to understand how margins behave under different cost and demand scenarios without juggling 20 spreadsheets.
 
-If you like the design, check out the Repository on GitHub.
+## What I built
 
+- A Python model tying electricity, labor, and material costs to product margins.
+- A scenario engine to compare multiple configurations.
+- An interface where non-technical users can change assumptions and see margin impact immediately.
+
+## My role
+
+- Designed the cost-driver structure like a process engineer: map → measure → model → iterate.
+- Implemented the simulation logic in Python.
+- Worked with stakeholders to cut vanity metrics and focus on the few decisions that matter.
+
+## Why it matters
+
+It turns “I think margins will drop” into “Here’s how much and why, under specific scenarios.”
