--- a/content/projects/access.mdx
+++ b/content/projects/access.mdx
@@ -1,138 +1,154 @@
 ---
-title: "Corporate Scenario Planner for Cross-Border Operations"
-description: A “flight simulator” for cross-border logistics and manufacturing costs, built to replace gut-feel spreadsheets.
-repository: benjaminarce-cloud/Manufacturing-Cost-Intelligence
+title: "Manufacturing Cost Intelligence System"
+description: A “flight simulator” for manufacturing decisions that replaces gut-feel spreadsheets.
+repository: YOUR-GITHUB-USER/manufacturing-cost-intel
 date: "2025-12-01"
 published: true
 ---
 
 ## What this actually is
 
-This tool is basically a Cross-Border Cost & Scenario Optimizer—a “flight simulator”
-for a company&apos;s logistics and supply chain operations.
+This is a Manufacturing Cost Intelligence System, but the easiest way to think about it
+is as a “flight simulator for business decisions” for a company that makes physical
+products.
 
-In practice, it&apos;s an interactive dashboard that lets a manager simulate the financial
-impact of real-world disruptions on the entire product portfolio. It&apos;s used by operations
-managers, logistics directors, and CFO-types to make quick, data-driven decisions like:
+In practice, it’s an interactive dashboard that lets a manager or executive simulate the
+financial impact of real-world shocks across the entire product line.
 
-- “Diesel fuel just went up 15% in Mexico. What is the total, bottom-line annual impact
-  on profit, and which routes get hit the hardest?”
-- “A new supplier offers 10% cheaper steel, but logistics costs go up 5%. Is that actually
-  a good trade-off?”
-- “We want to give drivers a 5% wage increase. Can we absorb that or do we need to raise prices?
-  If we raise prices, what happens to volume?”
+It’s built for people like a CFO, COO, or Operations Manager—anyone who has to answer
+big, expensive questions quickly. The tool supports decisions like:
 
-It takes complex, company-wide questions and gives clear, quantified answers in seconds,
-plus an AI-generated strategic briefing that recommends a path forward.
+- **Reacting to supply chain shocks:**  
+  “The cost of semiconductors just spiked by 15% globally. What is the total annual
+  impact on gross profit, and which products are now at risk of being unprofitable?”
+- **Strategic planning:**  
+  “Our union is negotiating a 5% wage increase. Can we absorb that, or do we need to
+  raise prices? And if we do, what happens to volume and revenue?”
+- **Proactive management:**  
+  “Which are our most and least profitable products right now? Where are the hidden
+  financial risks?”
+
+It takes those messy, company-wide questions and turns them into clear, quantified
+answers in seconds. On top of that, there’s an AI-powered strategist that writes a
+boardroom-ready briefing, identifying the core problem and recommending a non-obvious,
+data-driven path forward.
 
 ## Context / why I cared enough to build it
 
-The motivation came from how chaotic and opaque cross-border cost management really is.
+This came from watching how chaotic and slow financial decision-making can be in a
+manufacturing business.
 
-Before this tool, the process looked something like:
+Before this tool, a simple question like “What happens if fuel costs go up?” was handled
+with a mess of disconnected spreadsheets and gut-feel conversations:
 
-- A manager gets an email about a new fuel surcharge or updated labor rate.
-- They ask an analyst to “run the numbers.”
-- The analyst starts pulling data from three or four different spreadsheets:
-  bills of materials, shipping routes, labor costs, etc.
-- They tweak a few cells, pray nothing breaks, and then try to estimate the impact on
-  one or two big products.
+- Hunting down different spreadsheets: BOMs, labor rates, supplier pricing, etc.
+- Manually changing a few key cells in a massive Excel model and hoping none of the
+  hidden formulas broke.
+- Trying to estimate the impact on one or two “obvious” products and basically ignoring
+  the rest of the portfolio.
 
-It was slow, fragile, and almost impossible to see the total system-wide impact. By the
-time you had a number, the situation could already be different. There was no way to
-quickly compare alternative responses or see where the real risks were.
+It was slow, error-prone, and reactive. By the time an answer existed, the situation
+might already have changed. There was no easy way to compare multiple responses or see
+system-wide risk.
 
-I built this to replace that reactive, spreadsheet-driven approach with a single place
-that gives instant clarity and makes it easier to think strategically instead of just
-putting out fires.
+I built this to replace that fragmented, manual process with a single place that gives
+instant clarity and lets you think ahead instead of just reacting.
 
 ## What worked (so far)
 
-- The scenario planner is genuinely useful. Being able to move a single slider—“+15% on
-  semiconductors” or “+10% fuel in Mexico”—and see a multi-million-dollar annual P&L
-  impact in real time is the “wow” moment. What used to take days of analysis is now
-  instant, and you can explore multiple scenarios in one sitting.
-- The AI-generated briefing is a real time-saver. It doesn&apos;t just repeat the numbers;
-  it acts like a strategic analyst. In one “Semiconductor Crisis” test, it correctly
-  identified chips as the immediate problem but suggested focusing on internal machine-time
-  optimization as the highest-leverage, most feasible lever—something that wasn&apos;t obvious
-  from the raw numbers alone.
-- The portfolio health dashboard surfaces hidden risks. The “Stars” and “At-Risk” views
-  highlight high-volume products running on razor-thin margins, which are huge business
-  risks that weren&apos;t obvious from traditional reporting. It naturally starts conversations
-  about which products need price reviews or structural changes.
+- **The what-if engine is genuinely useful.**  
+  Moving a single slider—like “+15% on semiconductors”—and immediately seeing a
+  multi-million-dollar annual P&L impact is the “wow” moment. What used to take days of
+  analysis is now instant, and you can explore multiple scenarios in one session.
+- **The AI strategist provides non-obvious insights.**  
+  This is the part I’m most proud of. The AI doesn’t just rephrase the numbers; it acts
+  like a strategic consultant. In a “Semiconductor Crisis” test, it correctly identified
+  chips as the immediate issue but recommended a higher-leverage move: focusing on
+  internal machine-time optimization. It used the Feasibility data to argue that a small,
+  realistic internal change was smarter than trying to fight a global market shock.
+- **The portfolio health dashboard surfaces hidden winners and losers.**  
+  The “Stars” and “At-Risk” views quickly showed that some high-volume, seemingly
+  successful products were operating on razor-thin margins. Those products are now on the
+  radar for price reviews or cost-reduction initiatives—something that wasn’t obvious
+  from the old spreadsheets.
 
 ## What was messy or incomplete (being honest)
 
-- The data is static and manually entered. All the cost drivers (fuel, labor, materials)
-  still come from a CSV. For this to be truly useful in production, it would need live
-  data feeds: commodity prices, FX rates, freight indices, etc.
-- The “Feasibility” score is subjective. The AI&apos;s ability to suggest smart, non-obvious
-  levers depends on a Feasibility score in the cost-driver table. Right now those scores
-  are just my gut feel. A real implementation would need structured input from operations
-  leaders to make those scores meaningful.
-- The simulation model is too linear. It assumes a straight line from “+10% cost” to
-  “+10% impact,” which ignores real-world non-linearities like volume discounts,
-  step costs, and more complex pricing behavior.
-- The region logic is simplified. A lot of the logic implicitly defaults to “Texas” and
-  doesn&apos;t fully model multi-region routes with different costs, taxes, and tariffs at
-  each stage of the journey.
+- **The data is static and manually entered.**  
+  All cost data (materials, labor, logistics) still lives in CSV files. For real-world
+  daily use, it should be wired into live data APIs (commodity prices, FX rates, freight
+  indices, etc.).
+- **The Feasibility score is subjective.**  
+  The AI’s ability to suggest smart, non-obvious levers depends on a Feasibility score in
+  the cost-driver table. Right now those scores are my gut feel. A real deployment would
+  need workshops with operations and finance to turn that into something rigorous.
+- **The simulation model is too linear.**  
+  The engine basically assumes that a 10% cost increase leads to a 10% impact, which
+  ignores non-linear realities like economies of scale, bulk discounts, and tiered
+  pricing. The demand elasticity piece is also just a placeholder.
+- **The regional logic is simplified.**  
+  The model currently assumes a single “Texas”-style environment for most calculations.
+  A global manufacturing version would need a much richer model for different factories,
+  regions, taxes, and tariffs.
 
-So right now, it&apos;s a powerful simulator and thinking tool, but not yet a fully
-battle-hardened production system.
+So right now it’s a powerful simulator and thinking tool, but not a fully realistic
+production-grade system yet.
 
 ## What I’d do next
 
-- **Live data integration (Priority #1).** Replace the static `manual_cost_drivers.csv`
-  with live data sources. Start with fuel prices and FX rates so scenarios are anchored
-  in reality.
-- **Build a more realistic COGS model.** Break costs into variable (materials, fuel),
-  fixed (leases, salaries), and step costs (e.g., needing a new truck after a certain
-  volume threshold) instead of treating everything as proportional.
-- **Model multi-step logistics routes.** Move from a simple per-product cost structure
-  to route “journeys” like: assembly → sea freight → customs → warehouse → trucking.
-  Track cost accumulation at each stage.
-- **Make the AI interactive.** Turn the briefing into a conversational analyst: after
-  it gives the initial summary, the user can ask things like “What&apos;s the ROI on the
-  machine-time optimization you mentioned?” or “Compare the top three levers you suggested.”
+- **Live data integration (Priority #1).**  
+  Replace the static `manual_cost_drivers.csv` with live feeds. I’d start with fuel prices
+  and FX rates so scenarios are anchored to real-time conditions.
+- **Multi-driver “vector” scenarios.**  
+  The current UI mostly models one change at a time. The real world is “+10% steel AND
+  +5% labor AND −3% logistics” happening together. I’d upgrade the engine/UI to handle
+  multi-driver scenarios cleanly.
+- **Add probabilistic forecasting (Monte Carlo).**  
+  Instead of showing a single outcome, let users define volatility around key costs and
+  then run many simulations to get a full distribution: best case, worst case, and most
+  likely profit impacts. That’s closer to real risk management.
+- **Make the AI interactive.**  
+  Turn the static briefing into a conversation. After the initial report, the user could
+  ask things like “What’s the ROI on the machine-time optimization?” or “Compare the top
+  three options and list pros and cons.”
 
 ## Technical deep dive (bullet list)
 
 **Tech stack**
 
-- Frontend / app: Streamlit  
-- Data manipulation: Pandas, NumPy  
-- Optimization: SciPy (`scipy.optimize.linprog`)  
-- AI / LLM: OpenAI Python library (Chat API)  
+- Frontend / application: Streamlit  
+- Data manipulation: Pandas  
+- AI / LLM: OpenAI Python library (Chat API, `gpt-3.5-turbo-instruct`)  
 - Plotting & reporting: Plotly, FPDF2, Kaleido  
 
 **Data sources**
 
-- `bom_products.csv`: bill of materials for each product, including components, quantities,
-  price, volume, elasticity, region, etc.
-- `manual_cost_drivers.csv`: master cost table defining rate, unit, and Feasibility score
-  for each driver (fuel, labor, materials, etc.).
-- The simulation engine joins these in memory via the component field to look up cost
-  drivers for each BOM line.
+- `bom_products.csv`: bill of materials defining components, quantities, and key business
+  data (price, volume, elasticity, region) for each product.
+- `manual_cost_drivers.csv`: master cost table defining rate, unit, and a strategic
+  Feasibility score for each component.
+- Joining: the simulation engines join these in memory, using the BOM component as a key
+  to look up the corresponding cost driver, first trying `(Component, Region)` and then
+  falling back to `(Component, "Default")`.
 
-**Modeling & optimization**
+**Modeling / optimization / heuristics**
 
-- Simulation engine: `portfolio_simulator.py` does a bottom-up cost simulation, aggregating
-  per-unit costs to portfolio-level P&L.
-- It can run multi-driver scenarios, price pass-through, and simple demand elasticity
-  in a single run.
-- The AI briefing is driven by a carefully engineered prompt with:
-  - A management-consultant persona,
-  - Feasibility scores as hints for internal levers, and
-  - Negative constraints (what the AI should **not** do, like just stating the obvious).
+- Simulation engine: `portfolio_simulator.py` does a bottom-up cost simulation,
+  aggregating per-unit costs up to portfolio-level P&L and handling multi-product
+  dependencies.
+- AI heuristics:
+  - Persona prompting: ask the model to behave like a top-tier management consultant.
+  - Data-driven hinting: pass Feasibility scores to steer the AI toward realistic,
+    high-leverage internal levers.
+  - Negative constraints: explicitly tell the AI what not to do (for example, “don’t just
+    restate the charts”).
 
-**Interesting engineering details**
+**Engineering details**
 
-- Data validation on startup (`utils.py`) to catch duplicate costs, unit mismatches,
-  and other problems early.
-- Clear separation between “brain” (core logic in `/app/core`) and “face” (Streamlit UI
-  in `/app/main.py`), so the simulation engine is testable and reusable.
-- Secure API key handling with `st.secrets`, with a fallback password input if no secret
-  is set.
-- Use of `st.session_state` to cache the AI report so slider interactions don&apos;t trigger
-  unnecessary repeated API calls.
+- Data validation on startup (`utils.py`) to catch duplicate costs, inconsistent units,
+  and other issues early so the app fails fast instead of giving quietly wrong numbers.
+- Modular “brain and face” architecture: core logic lives under `/app/core`, fully
+  decoupled from the Streamlit UI in `/app/main.py`, which makes it easier to test and
+  reuse.
+- Secure API key handling using `st.secrets`, falling back to a password input if needed,
+  to avoid hard-coding secrets.
